--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,6 +2,7 @@ nav {
     position: absolute;
     width: 100%;
     top: 5%;
+    letter-spacing: 0.2rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,8 +13,8 @@ nav {
 }
 
 ul {
-    height: 50px;
-    width: 40%;
+    height: 3.5rem;
+    width: 50%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -28,7 +29,7 @@ h1 {
 }
 
 .fa-circle {
-     font-size: 20px;
+     font-size: 1.5rem;
      color: white;
  }
 
@@ -46,7 +47,7 @@ ul li {
 
 
 
-@media (max-width: 320px) {
+@media (max-width: 550px) {
 
     ul.nav {
         height: 50px;
@@ -57,11 +58,25 @@ ul li {
     .mobile_nav {
         height: 40px;
         width: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-direction: column;
         position: absolute;
         cursor: pointer;
-        right: 10px;
-        top: 10px;
-        background: rgba(250, 250, 240, 0.514);
+        right: 5%;
+        top: 10%;
+        padding: 10px 5px 10px 5px;
+        box-sizing: border-box;
+        background: rgba(0, 0, 0, 0.4);
+        box-shadow: 8px 10px 20px 0 rgba(46, 61, 73, .15);
+    }
+
+    .mobile_nav div {
+        border-radius: 50px;
+        width: 80%;
+        height: 3px;
+        background-color: white;
         box-shadow: 8px 10px 20px 0 rgba(46, 61, 73, .15);
     }
 
